@@ -42,6 +42,7 @@ from obsplus.utils import (
     to_timestamp,
     get_progressbar,
     thread_lock_function,
+    get_nslc_series,
 )
 
 # from obsplus.interfaces import WaveformClient
@@ -635,20 +636,17 @@ class WaveBank(_Bank):
         files: pd.Series = (self.bank_path + index.path).unique()
         # iterate the files to read and try to load into waveforms
         stt = obspy.Stream()
-        for st in (_try_read_stream(x, format=self.format) for x in files):
+        kwargs = dict(
+            format=self.format,
+            starttime=obspy.UTCDateTime(starttime) if starttime else None,
+            endtime=obspy.UTCDateTime(endtime) if endtime else None,
+        )
+        for st in (_try_read_stream(x, **kwargs) for x in files):
             if st is not None and len(st):
                 stt += st
         # filter out any traces not in index (this can happen when files hold
         # multiple traces).
-        nslc = set(
-            index.network
-            + "."
-            + index.station
-            + "."
-            + index.location
-            + "."
-            + index.channel
-        )
+        nslc = set(get_nslc_series(index))
         stt.traces = [x for x in stt if x.id in nslc]
         # trim, merge, attach response
         self._polish_stream(stt, starttime, endtime, attach_response)
